大幅インタフェース変更 Ver. 0.0.2-SNAPSHOT をコミット
なくなったら困るので、いったんコミット

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ simple-valid4scalatra/.cache
 */.classpath
 */.project
 */.settings
+*/.cache
 
 # temp
 simple-valid/src/main/resources/application_ja.properties
