--- a/simple-valid4scalatra/pom.xml
+++ b/simple-valid4scalatra/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 
-<!-- 	<groupId>jp.que.ti.sv</groupId> -->
+	<!-- <groupId>jp.que.ti.sv</groupId> -->
 	<artifactId>simple-valid4scalatra</artifactId>
 	<packaging>jar</packaging>
 	<name>simple-valid4scalatra -- simple-valid</name>
@@ -40,7 +40,7 @@
 
 		<dependency>
 			<groupId>org.scalatra</groupId>
-			<artifactId>scalatra_2.10</artifactId>
+			<artifactId>scalatra_${scala.version.short}</artifactId>
 		</dependency>
 
 		<dependency>
